[package]
name = "druid-frontend"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/sysint64/druid.git" }
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
