[package]
name = "druid-frontend"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { path = "druid/druid" }
tech_paws_core = { path = "core" }
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
